reapply useful changes from previous commits [integralcs 23234]

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "ext-pdo": "*"
     },
     "autoload": {
+        "classmap": [
+			"lib/vendor/sfYaml"
+		],
         "psr-0": { "Doctrine_": "lib/" }
     }
 }
